fix code wrapping on mobile

--- a/css/2_custom.css
+++ b/css/2_custom.css
@@ -75,6 +75,7 @@ code {
 }
 pre {
     overflow-x: auto;
+    word-wrap: normal;
 }
 pre code {
     counter-reset: lineNumber;
